<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@drawable/backk"
    android:fillViewport="true"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginBottom="10dp"
        android:src="@mipmap/domestic" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/edittextshapelogin"
        android:drawableLeft="@drawable/emaill"
        android:ems="10"
        android:hint="@string/youremail"
        android:inputType="textEmailAddress"
        android:padding="10dp" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"

        android:background="@drawable/edittextshapelogin"
        android:drawableLeft="@drawable/password"
        android:ems="10"
        android:hint="@string/yourpassword"
        android:inputType="textPassword"
        android:padding="10dp" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"

        android:layout_marginRight="30dp"
        android:layout_marginBottom="10dp"
        android:text="@string/rememberme"
        android:textColor="@color/colorWhite"
        android:textStyle="bold" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="match_parent"
        android:layout_height="46dp"

        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/buttonsquare"
        android:text="@string/login"
        android:textColor="@color/colorWhite"
        android:textSize="14sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:gravity="center"
        android:text="@string/newregistration"
        android:textColor="@color/colorWhite"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textForgot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/forgotpassword"
        android:textColor="@color/colorWhite"
        android:textSize="16sp"
        android:textStyle="bold" />


</LinearLayout>