<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@drawable/backk"
    android:fitsSystemWindows="true"
    android:gravity="top"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/backk"
        android:gravity="center|top"
        android:orientation="vertical"
        android:paddingLeft="24dp"
        android:paddingTop="40dp"
        android:paddingRight="24dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"

            android:background="@drawable/buttonsquare"
            android:gravity="center"
            android:text="@string/registration"
            android:textColor="@color/colorWhite"
            android:textSize="18sp"
            android:textStyle="bold"
            android:visibility="visible" />

        <!-- Email Label -->


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="199dp"
            android:layout_height="136dp"
            android:layout_marginTop="-10dp"
            app:srcCompat="@mipmap/cameraa" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/clicktotake"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="14sp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="2dp"
            android:layout_marginBottom="5dp"
            android:background="?attr/colorAccent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="0.5"
                    android:text="@string/location"
                    android:textColor="@android:color/background_dark"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/spinLoc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="4dp"
                    android:layout_weight="0.5"
                    android:background="@drawable/edittextshape"
                    android:entries="@array/location"
                    android:padding="7dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="@string/phone"
                    android:textColor="@android:color/background_dark"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/txtphone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:background="@drawable/edittextshape"
                    android:drawableLeft="@drawable/mobi"
                    android:inputType="phone"
                    android:padding="7dp"
                    android:textColor="@android:color/black"
                    android:textCursorDrawable="@null" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:text="@string/name"
                android:textColor="@android:color/background_dark"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/txtname"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:background="@drawable/edittextshape"
                android:drawableLeft="@drawable/use"
                android:ems="10"
                android:inputType="text"
                android:padding="7dp"
                android:textColor="@android:color/black"
                android:textCursorDrawable="@null" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:text="@string/password"
                android:textColor="@android:color/background_dark"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/txtpassword"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:background="@drawable/edittextshape"
                android:drawableLeft="@drawable/pass"
                android:ems="10"
                android:inputType="textPassword"
                android:padding="7dp"
                android:textAllCaps="false"
                android:textColor="@android:color/black"
                android:textCursorDrawable="@null" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:text="@string/email"
                android:textColor="@android:color/background_dark"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/txtEmail"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:background="@drawable/edittextshape"
                android:drawableLeft="@drawable/email"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:padding="7dp"
                android:textColor="@android:color/black"
                android:textCursorDrawable="@null" />

            <TextView
                android:id="@+id/textView35"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:text="Home Location"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold" />

        </LinearLayout>
        <!-- Password Label -->


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="-20dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textLoc"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.2"
                android:background="@drawable/edittextshape"
                android:textAlignment="center"
                android:textSize="14sp" />

            <ImageButton
                android:id="@+id/btnMap"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.8"
                android:background="@android:color/transparent"
                app:srcCompat="@android:drawable/ic_menu_mylocation" />
        </LinearLayout>


        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_register"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="5dp"


            android:background="@drawable/buttonsquaredark"
            android:text="@string/register"
            android:textColor="@color/colorWhite"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvregister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:text="@string/alreadyregister"
            android:textColor="#000000"
            android:textSize="14sp"
            android:textStyle="bold" />

    </LinearLayout>
</ScrollView>